# oxidie-sloc

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  LICENSE-COMMERCIAL.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  install.sh  run.bat  run.sh  sloc.example.toml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml  update-dist.yml
ci/: sloc-ci-default.toml  sloc-ci-full-scope.toml  sloc-ci-strict.toml
ci/jenkins/: Dockerfile.agent  install-rust-cache.sh  plugins.txt
crates/sloc-cli/: Cargo.toml
crates/sloc-cli/src/: main.rs
crates/sloc-config/: Cargo.toml
crates/sloc-config/src/: lib.rs
crates/sloc-core/: Cargo.toml
crates/sloc-core/src/: delta.rs  history.rs  lib.rs
crates/sloc-languages/: Cargo.toml
crates/sloc-languages/src/: lib.rs
crates/sloc-languages/tests/: golden.rs
crates/sloc-languages/tests/corpus/c/: mixed.c
crates/sloc-languages/tests/corpus/go/: mixed.go
crates/sloc-languages/tests/corpus/python/: mixed.py
crates/sloc-languages/tests/corpus/rust/: mixed.rs
crates/sloc-languages/tests/corpus/typescript/: mixed.ts
crates/sloc-report/: Cargo.toml
crates/sloc-report/src/: lib.rs
crates/sloc-web/: Cargo.toml
crates/sloc-web/src/: lib.rs
deploy/: oxide-sloc.service  server.toml
docs/: airgap.md  ci-integrations.md  licensing.md  server-deployment.md
examples/bitbucket/: bitbucket-pipelines.yml
examples/confluence/: update-sloc-page.sh
examples/jenkins/: Jenkinsfile
samples/basic/: test.c  test.py  test.sh
samples/basic/sloc/airgap-devkit_31d79c60-b1f9-4612-b00e-a3f1ed893da4/: report.html
samples/basic/sloc/airgap-devkit_8e8df709-2532-4ddc-bc6f-7c8f5217a4f1/: report.html
