[package]
name = "sloc-report"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
serde_json.workspace = true
sloc-core = { path = "../sloc-core" }
