[package]
name = "sloc-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
rfd = "0.14"
serde_json = "1"
anyhow.workspace = true
askama.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
sloc-config = { path = "../sloc-config" }
sloc-core = { path = "../sloc-core" }
sloc-report = { path = "../sloc-report" }
